--- a/ct.yaml
+++ b/ct.yaml
@@ -6,9 +6,15 @@ timeout: 600s
 # Chart directories to scan for changes recursively
 chart-dirs:
   - helm/_global
-  - helm/dev
-  - helm/uat
-  - helm/prod
+  - helm/dev/ext
+  - helm/dev/mid
+  - helm/dev/top
+  - helm/uat/ext
+  - helm/uat/mid
+  - helm/uat/top
+  - helm/prod/ext
+  - helm/prod/mid
+  - helm/prod/top
 
 # Required Helm repositories for chart dependencies
 chart-repos:
