--- a/helm/dev/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/dev/top/idpay-onboarding-workflow/values.yaml
@@ -52,3 +52,11 @@ microservice-chart:
   keyvault:
     name: "cstar-d-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+postman-test:
+  run: true
+  repoName: idpay-onboarding-workflow
+  dir: postman
+  collectionName: "idpay-onboarding-workflow-e2e.postman_collection.json"
+  envVariablesFile: "idpay_dev.postman_environment.json"
+
+  # * - Queste variabili d'ambiente le troviamo su Azure DevOps all'interno della folder Library
