--- a/helm/uat/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/uat/top/idpay-onboarding-workflow/values.yaml
@@ -44,3 +44,9 @@ microservice-chart:
   keyvault:
     name: "cstar-u-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+postman-test:
+  run: true
+  repoName: idpay-onboarding-workflow
+  dir: postman
+  collectionName: "idpay-onboarding-workflow-e2e.postman_collection.json"
+  envVariablesFile: "idpay_uat.postman_environment.json"
