--- a/helm/uat/top/idpay-wallet/values.yaml
+++ b/helm/uat/top/idpay-wallet/values.yaml
@@ -39,3 +39,11 @@ microservice-chart:
   keyvault:
     name: "cstar-u-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+postman-test:
+  run: true
+  repoName: idpay-onboarding-workflow
+  dir: postman
+  collectionName: "idpay-wallet-e2e.postman_collection.json"
+  envVariablesFile: "idpay_uat.postman_environment.json"
+
+  # * - Queste variabili d'ambiente le troviamo su Azure DevOps all'interno della folder Library
