--- a/helm/uat/top/idpay-payment/Chart.yaml
+++ b/helm/uat/top/idpay-payment/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: idpay-merchant
-description: IDPay Merchant
+name: idpay-payment
+description: IDPay Payment
 type: application
 version: 1.0.0
 appVersion: 1.0.0
