Update autoscaling config

--- a/helm/dev/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/dev/mid/idpay-recovery-error-topic/values.yaml
@@ -13,16 +13,16 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: true
-    minReplica: 1
-    maxReplica: 2
-    pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
-    triggers:
-      - type: cpu
-        metadata:
-          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+    enable: false
+#    minReplica: 1
+#    maxReplica: 2
+#    pollingInterval: 30 # seconds
+#    cooldownPeriod: 300 # seconds
+#    triggers:
+#      - type: cpu
+#        metadata:
+#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+#          value: "70"
 
   envSecret:
     aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
