--- a/helm/prod/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/prod/top/idpay-admissibility-assessor/values.yaml
@@ -16,16 +16,16 @@ microservice-chart:
       cpu: "500m"
 
   autoscaling:
-    enable: false
-    # minReplica: 1
-    # maxReplica: 2
-    # pollingInterval: 30 # seconds
-    # cooldownPeriod: 300 # seconds
-    # triggers:
-    #   - type: cpu
-    #     metadata:
-    #       type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-    #       value: "70"
+    enable: true
+    minReplica: 1
+    maxReplica: 2
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+     - type: cpu
+       metadata:
+         type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+         value: "70"
 
   envSecret:
     aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
