--- a/helm/prod/top/idpay-reward-calculator/values.yaml
+++ b/helm/prod/top/idpay-reward-calculator/values.yaml
@@ -17,7 +17,7 @@ microservice-chart:
       cpu: "1"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
