--- a/helm/prod/top/idpay-wallet/values.yaml
+++ b/helm/prod/top/idpay-wallet/values.yaml
@@ -16,16 +16,16 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: false
-    # minReplica: 1
-    # maxReplica: 2
-    # pollingInterval: 30 # seconds
-    # cooldownPeriod: 300 # seconds
-    # triggers:
-    #   - type: cpu
-    #     metadata:
-    #       type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-    #       value: "70"
+    enable: true
+    minReplica: 1
+    maxReplica: 2
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: "-Xms256m -Xmx512m -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json"
