--- a/helm/uat/ext/idpay-notification-manager/values.yaml
+++ b/helm/uat/ext/idpay-notification-manager/values.yaml
@@ -16,16 +16,16 @@ microservice-chart:
       cpu: "1"
 
   autoscaling:
-    enable: true
-    minReplica: 1
-    maxReplica: 2
-    pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
-    triggers:
-      - type: cpu
-        metadata:
-          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+    enable: false
+#    minReplica: 1
+#    maxReplica: 2
+#    pollingInterval: 30 # seconds
+#    cooldownPeriod: 300 # seconds
+#    triggers:
+#      - type: cpu
+#        metadata:
+#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+#          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
