--- a/helm/uat/top/idpay-transactions/values.yaml
+++ b/helm/uat/top/idpay-transactions/values.yaml
@@ -16,16 +16,16 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: true
-    minReplica: 1
-    maxReplica: 1
-    pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
-    triggers:
-      - type: cpu
-        metadata:
-          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+    enable: false
+#    minReplica: 1
+#    maxReplica: 1
+#    pollingInterval: 30 # seconds
+#    cooldownPeriod: 300 # seconds
+#    triggers:
+#      - type: cpu
+#        metadata:
+#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+#          value: "70"
 
   envSecret:
     aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
