--- a/helm/dev/top/idpay-payment/values.yaml
+++ b/helm/dev/top/idpay-payment/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpaypayment
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-payment
+    tag: snapshot-IDP-2675-update-workflows-github
     pullPolicy: Always
 
   ingress:
