--- a/helm/dev/top/idpay-reward-calculator/values.yaml
+++ b/helm/dev/top/idpay-reward-calculator/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpayrewardcalculator
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-reward-calculator
+    tag: snapshot-IDP-2675-update-workflows-github-
     pullPolicy: Always
 
   ingress:
