--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -30,28 +30,18 @@ parameters:
   displayName: Top ArgoCD Apps
   type: object
   default:
-    - p4pa-auth
-    - p4pa-organization
-    - p4pa-pagopa-payments
-    - p4pa-pu-bff
-    - p4pa-workflow-hub
-    - p4pa-debt-positions
+    - idpay-onboarding-workflow
 
 - name: APPS_MID
   displayName: Mid ArgoCD Apps
   type: object
   default:
-    - p4pa-workflow-worker
-    - p4pa-fileshare
-    - p4pa-classification
-    - p4pa-pdnd-services
 
 - name: APPS_EXT
   displayName: Extra ArgoCD Apps
   type: object
   default:
-    - p4pa-io-notification
-    - p4pa-send-notification
+
 
 - name: POSTMAN_BRANCH
   displayName: Postman branch
@@ -73,7 +63,7 @@ variables:
   - name: directoryPattern
     value: 'helm/${{ parameters.ENV }}'
   - name: area
-    value: p4pa-payhub
+    value: idpay
   - name: sourceBranch
     value: $[variables['Build.SourceBranch']]
   - name: buildReason
@@ -215,46 +205,46 @@ stages:
             dependsOnJob: 'deploy_mid'
             targetBranch: ${{ parameters.ARGOCD_TARGET_BRANCH }}
 
-  # Stage for Postman Tests
-  - stage: run_postman_tests
-    condition: and(succeeded(), or(${{eq(parameters.ENV, 'dev')}}, ${{eq(parameters.ENV, 'uat')}}))
-    dependsOn: sync_argo_apps
-    jobs:
-      # Top Apps Tests
-      - ${{ if and(ne(length(parameters.APPS_TOP), 0), ne(parameters.APPS_TOP, '[]')) }}:
-        - template: templates/postman-tests-template.yml
-          parameters:
-            appsList: ${{ parameters.APPS_TOP }}
-            appCategory: 'top'
-            env: ${{ parameters.ENV }}
-            agentPoolName: $(agentPoolName)
-            postmanBranch: ${{ parameters.POSTMAN_BRANCH }}
-            azureServiceConnection: $(azureServiceConnectionName)
-            keyVaultName: $(postman_kv_name)
-            secretName: $(postman_env_secret_name)
-
-      # Mid Apps Tests
-      - ${{ if and(ne(length(parameters.APPS_MID), 0), ne(parameters.APPS_MID, '[]')) }}:
-        - template: templates/postman-tests-template.yml
-          parameters:
-            appsList: ${{ parameters.APPS_MID }}
-            appCategory: 'mid'
-            env: ${{ parameters.ENV }}
-            agentPoolName: $(agentPoolName)
-            postmanBranch: ${{ parameters.POSTMAN_BRANCH }}
-            azureServiceConnection: $(azureServiceConnectionName)
-            keyVaultName: $(postman_kv_name)
-            secretName: $(postman_env_secret_name)
-
-      # Ext Apps Tests
-      - ${{ if and(ne(length(parameters.APPS_EXT), 0), ne(parameters.APPS_EXT, '[]')) }}:
-        - template: templates/postman-tests-template.yml
-          parameters:
-            appsList: ${{ parameters.APPS_EXT }}
-            appCategory: 'ext'
-            env: ${{ parameters.ENV }}
-            agentPoolName: $(agentPoolName)
-            postmanBranch: ${{ parameters.POSTMAN_BRANCH }}
-            azureServiceConnection: $(azureServiceConnectionName)
-            keyVaultName: $(postman_kv_name)
-            secretName: $(postman_env_secret_name)
+#  # Stage for Postman Tests
+#  - stage: run_postman_tests
+#    condition: and(succeeded(), or(${{eq(parameters.ENV, 'dev')}}, ${{eq(parameters.ENV, 'uat')}}))
+#    dependsOn: sync_argo_apps
+#    jobs:
+#      # Top Apps Tests
+#      - ${{ if and(ne(length(parameters.APPS_TOP), 0), ne(parameters.APPS_TOP, '[]')) }}:
+#        - template: templates/postman-tests-template.yml
+#          parameters:
+#            appsList: ${{ parameters.APPS_TOP }}
+#            appCategory: 'top'
+#            env: ${{ parameters.ENV }}
+#            agentPoolName: $(agentPoolName)
+#            postmanBranch: ${{ parameters.POSTMAN_BRANCH }}
+#            azureServiceConnection: $(azureServiceConnectionName)
+#            keyVaultName: $(postman_kv_name)
+#            secretName: $(postman_env_secret_name)
+#
+#      # Mid Apps Tests
+#      - ${{ if and(ne(length(parameters.APPS_MID), 0), ne(parameters.APPS_MID, '[]')) }}:
+#        - template: templates/postman-tests-template.yml
+#          parameters:
+#            appsList: ${{ parameters.APPS_MID }}
+#            appCategory: 'mid'
+#            env: ${{ parameters.ENV }}
+#            agentPoolName: $(agentPoolName)
+#            postmanBranch: ${{ parameters.POSTMAN_BRANCH }}
+#            azureServiceConnection: $(azureServiceConnectionName)
+#            keyVaultName: $(postman_kv_name)
+#            secretName: $(postman_env_secret_name)
+#
+#      # Ext Apps Tests
+#      - ${{ if and(ne(length(parameters.APPS_EXT), 0), ne(parameters.APPS_EXT, '[]')) }}:
+#        - template: templates/postman-tests-template.yml
+#          parameters:
+#            appsList: ${{ parameters.APPS_EXT }}
+#            appCategory: 'ext'
+#            env: ${{ parameters.ENV }}
+#            agentPoolName: $(agentPoolName)
+#            postmanBranch: ${{ parameters.POSTMAN_BRANCH }}
+#            azureServiceConnection: $(azureServiceConnectionName)
+#            keyVaultName: $(postman_kv_name)
+#            secretName: $(postman_env_secret_name)
