--- a/helm/dev/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/dev/top/idpay-onboarding-workflow/values.yaml
@@ -1,11 +1,19 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpayonboardingworkflow
-    tag: latest
+    repository: ghcr.io/pagopa/idpayonboardingworkflow
+    tag: snapshot-IDP-2675-update-workflows-github
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+      create: true
+      host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+      path: /idpayonboardingworkflow(/|$)(.*)
+      rewriteTarget: /$2
+      servicePort: 8000
+      # proxyBodySize: 2m
+      annotations: {
+        nginx.ingress.kubernetes.io/satisfy: "any"
+      }
 
   resources:
     requests:
@@ -47,8 +55,16 @@ microservice-chart:
       -Dcom.sun.management.jmxremote.ssl=false
 
   envSecret:
-    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
 
   keyvault:
-    name: "cstar-d-idpay-kv"
+    name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+postman-test:
+  run: true
+  repoName: idpay-onboarding-workflow
+  dir: postman
+  collectionName: "idpay-onboarding-workflow-e2e.postman_collection.json"
+  envVariablesFile: "idpay_dev.postman_environment.json"
+
+  # * - Queste variabili d'ambiente le troviamo su Azure DevOps all'interno della folder Library
