--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -31,6 +31,7 @@ parameters:
   type: object
   default:
     - idpay-onboarding-workflow
+    - idpay-payment
 
 - name: APPS_MID
   displayName: Mid ArgoCD Apps
