--- a/helm/dev/top/idpay-payment/values.yaml
+++ b/helm/dev/top/idpay-payment/values.yaml
@@ -5,26 +5,35 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+    create: true
+    host: "idpay.itn.internal.dev.cstar.pagopa.it"
+    path: /idpaypayment(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8000
+    # proxyBodySize: 2m
+    annotations: {
+      nginx.ingress.kubernetes.io/satisfy: "any"
+    }
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
-    enable: false
-#    minReplica: 1
-#    maxReplica: 2
-#    pollingInterval: 30 # seconds
-#    triggers:
-#      - type: cpu
-#        metadata:
-#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-#          value: "70"
+    enable: true
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
@@ -46,15 +55,15 @@ microservice-chart:
       -Dcom.sun.management.jmxremote.ssl=false
 
   envSecret:
-    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
 
   keyvault:
-    name: "cstar-d-idpay-kv"
+    name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
-  postman-test:
-    run: true
-    repoName: idpay-payment
-    dir: postman
-    collectionName: "idpay-payment-e2e.postman_collection.json"
-    envVariablesFile: "idpay_dev.postman_environment.json"
+#  postman-test:
+#    run: true
+#    repoName: idpay-payment
+#    dir: postman
+#    collectionName: "idpay-payment-e2e.postman_collection.json"
+#    envVariablesFile: "idpay_dev.postman_environment.json"
