update ms idpay-reward-calculator

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -32,6 +32,7 @@ parameters:
   default:
     - idpay-onboarding-workflow
     - idpay-payment
+    - idpay-reward-calculator
 
 - name: APPS_MID
   displayName: Mid ArgoCD Apps
