--- a/helm/dev/ext/values.yaml
+++ b/helm/dev/ext/values.yaml
@@ -1,51 +1,31 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-reward-calculator
-    tag: snapshot-idp-2675-update-workflows-github-
+    repository: cstardcommonacr.azurecr.io/idpaymerchant
+    tag: latest
     pullPolicy: Always
 
   ingress:
-    create: true
-    host: "idpay.itn.internal.dev.cstar.pagopa.it"
-    path: /idpayrewardcalculator(/|$)(.*)
-    rewriteTarget: /$2
-    servicePort: 8000
-    # proxyBodySize: 2m
-    annotations: {
-      nginx.ingress.kubernetes.io/satisfy: "any"
-    }
+    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
 
   resources:
     requests:
-      memory: "512Mi"
-      cpu: "200m"
+      memory: "768Mi"
+      cpu: "150m"
     limits:
-      memory: "1Gi"
+      memory: "768Mi"
       cpu: "600m"
 
   autoscaling:
     enable: false
-    minReplica: 1
-    maxReplica: 1
-    pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
-    triggers:
-      - type: cpu
-        metadata:
-          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
-
-  envSecret:
-    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
-  keyvault:
-    name: "cstar-d-itn-idpay-kv"
-    tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-
-  # nodeSelector: {}
-
-  # tolerations: []
-
-  # affinity: {}
+#    minReplica: 1
+#    maxReplica: 1
+#    pollingInterval: 30 # seconds
+#    cooldownPeriod: 300 # seconds
+#    triggers:
+#      - type: cpu
+#        metadata:
+#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+#          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
@@ -65,5 +45,17 @@ microservice-chart:
       -Djava.rmi.server.hostname=127.0.0.1 
       -Dcom.sun.management.jmxremote.authenticate=false 
       -Dcom.sun.management.jmxremote.ssl=false
-    CACHE_REFRESH_MS_RATE: "60000"
-    REDIS_CACHE_ENABLED: "true"
+
+  envSecret:
+    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+
+  keyvault:
+    name: "cstar-d-idpay-kv"
+    tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+
+  postman-test:
+    run: true
+    repoName: idpay-merchant
+    dir: postman
+    collectionName: "idpay-merchant-e2e.postman_collection.json"
+    envVariablesFile: "idpay_dev.postman_environment.json"
