update ms idpay-transactions

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -34,6 +34,7 @@ parameters:
     - idpay-payment
     - idpay-reward-calculator
     - idpay-merchant
+    - idpay-transactions
 
 - name: APPS_MID
   displayName: Mid ArgoCD Apps
