--- a/helm/dev/top/idpay-transactions/values.yaml
+++ b/helm/dev/top/idpay-transactions/values.yaml
@@ -1,37 +1,45 @@
 microservice-chart:
   image:
     repository: cstardcommonacr.azurecr.io/idpaytransactions
-    tag: latest
+    tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+    create: true
+    host: "idpay.itn.internal.dev.cstar.pagopa.it"
+    path: /idpaytransactions(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8000
+    # proxyBodySize: 2m
+    annotations: {
+      nginx.ingress.kubernetes.io/satisfy: "any"
+    }
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
       memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
     enable: false
-#    minReplica: 1
-#    maxReplica: 1
-#    pollingInterval: 30 # seconds
-#    cooldownPeriod: 300 # seconds
-#    triggers:
-#      - type: cpu
-#        metadata:
-#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-#          value: "70"
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envSecret:
-    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
 
   keyvault:
-    name: "cstar-d-idpay-kv"
+    name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
