update ms idpay-payment-instrument

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -42,6 +42,7 @@ parameters:
   displayName: Mid ArgoCD Apps
   type: object
   default:
+    - idpay-payment-instrument
 
 - name: APPS_EXT
   displayName: Extra ArgoCD Apps
