update ms idpay-initiative-statistics

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -43,6 +43,7 @@ parameters:
   type: object
   default:
     - idpay-payment-instrument
+    - idpay-initiative-statistics
 
 - name: APPS_EXT
   displayName: Extra ArgoCD Apps
