update ms idpay-self-expense-backend

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -50,6 +50,7 @@ parameters:
   displayName: Extra ArgoCD Apps
   type: object
   default:
+    - idpay-self-expense-backend
 
 
 - name: POSTMAN_BRANCH
