--- a/helm/dev/top/idpay-wallet/values.yaml
+++ b/helm/dev/top/idpay-wallet/values.yaml
@@ -1,31 +1,39 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpaywallet
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-wallet
+    tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+    create: true
+    host: "idpay.itn.internal.dev.cstar.pagopa.it"
+    path: /idpaywallet(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8000
+    # proxyBodySize: 2m
+    annotations: {
+      nginx.ingress.kubernetes.io/satisfy: "any"
+    }
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
     enable: false
-    # minReplica: 1
-    # maxReplica: 2
-    # pollingInterval: 30 # seconds
-    # cooldownPeriod: 300 # seconds
-    # triggers:
-    #   - type: cpu
-    #     metadata:
-    #       type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-    #       value: "70"
+    minReplica: 1
+    maxReplica: 2
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+     - type: cpu
+       metadata:
+         type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+         value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: "-Xms256m -Xmx512m -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=3002 -Dcom.sun.management.jmxremote.rmi.port=3003 -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
@@ -33,16 +41,15 @@ microservice-chart:
     IS_IBAN_FORMAL_CONTROL_ACTIVE: "false"
 
   envSecret:
-    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
-
+    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
   keyvault:
-    name: "cstar-d-idpay-kv"
+    name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-postman-test:
-  run: true
-  repoName: idpay-onboarding-workflow
-  dir: postman
-  collectionName: "idpay-wallet-e2e.postman_collection.json"
-  envVariablesFile: "idpay_dev.postman_environment.json"
+#  postman-test:
+#    run: true
+#    repoName: idpay-onboarding-workflow
+#    dir: postman
+#    collectionName: "idpay-wallet-e2e.postman_collection.json"
+#    envVariablesFile: "idpay_dev.postman_environment.json"
 
   # * - Queste variabili d'ambiente le troviamo su Azure DevOps all'interno della folder Library
