--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -1,11 +1,19 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpayadmissibilityassessor
-    tag: latest
+    repository: docker pull ghcr.io/pagopa/idpay-admissibility-assessor
+    tag: snapshot-idp-2677-add-workflows-for-new-cicd
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+    create: true
+    host: "idpay.itn.internal.dev.cstar.pagopa.it"
+    path: /idpayadmissibilityassessor(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8000
+    # proxyBodySize: 2m
+    annotations: {
+      nginx.ingress.kubernetes.io/satisfy: "any"
+    }
 
   resources:
     requests:
@@ -28,7 +36,7 @@ microservice-chart:
     #       value: "70"
 
   envSecret:
-    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
     PAGOPA_PDND_CONFIGURATION_JWT_KEY_C001: pagopa-pdnd-configuration-jwt-key-c001
     PAGOPA_PDND_CONFIGURATION_AGID_JWT_PUB_C001: pagopa-pdnd-configuration-agid-jwt-pub-c001
     PAGOPA_PDND_CONFIGURATION_CLIENT_ID_C001: pagopa-pdnd-configuration-client-id-c001
@@ -41,7 +49,7 @@ microservice-chart:
     PAGOPA_PDND_CONFIGURATION_PURPOSE_ID_C021: pagopa-pdnd-configuration-purpose-id-c021
 
   keyvault:
-    name: "cstar-d-idpay-kv"
+    name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   envConfig:
