update ms idpay-group

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -47,6 +47,7 @@ parameters:
     - idpay-payment-instrument
     - idpay-initiative-statistics
     - idpay-portal-welfare-backend-role-permission
+    - idpay-group
 
 - name: APPS_EXT
   displayName: Extra ArgoCD Apps
