--- a/helm/dev/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/dev/mid/idpay-recovery-error-topic/values.yaml
@@ -1,28 +1,28 @@
 microservice-chart:
   image:
     repository: cstardcommonacr.azurecr.io/idpayrecoveryerrortopic
-    tag: latest
+    tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
     enable: false
-#    minReplica: 1
-#    maxReplica: 2
-#    pollingInterval: 30 # seconds
-#    cooldownPeriod: 300 # seconds
-#    triggers:
-#      - type: cpu
-#        metadata:
-#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-#          value: "70"
+    minReplica: 1
+    maxReplica: 2
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envSecret:
     aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
