--- a/helm/dev/ext/idpay-notification-email/values.yaml
+++ b/helm/dev/ext/idpay-notification-email/values.yaml
@@ -2,31 +2,39 @@ microservice-chart:
 
   image:
     repository: cstardcommonacr.azurecr.io/idpaynotificationemail
-    tag: latest
+    tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+    create: true
+    host: "idpay.itn.internal.dev.cstar.pagopa.it"
+    path: /idpaynotificationemail(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8000
+    # proxyBodySize: 2m
+    annotations: {
+      nginx.ingress.kubernetes.io/satisfy: "any"
+    }
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
     enable: false
-#    minReplica: 1
-#    maxReplica: 1
-#    pollingInterval: 30 # seconds
-#    cooldownPeriod: 300 # seconds
-#    triggers:
-#      - type: cpu
-#        metadata:
-#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-#          value: "70"
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     ENV_TARGET: "DEV"
@@ -65,9 +73,9 @@ microservice-chart:
 
   # affinity: {}
 
-  postman-test:
-    run: true
-    repoName: idpay-notification-email
-    dir: postman
-    collectionName: "idpay-notification-email-e2e.postman_collection.json"
-    envVariablesFile: "idpay_dev.postman_environment.json"
+  # postman-test:
+  #   run: true
+  #   repoName: idpay-notification-email
+  #   dir: postman
+  #   collectionName: "idpay-notification-email-e2e.postman_collection.json"
+  #   envVariablesFile: "idpay_dev.postman_environment.json"
