--- a/helm/dev/ext/idpay-iban/values.yaml
+++ b/helm/dev/ext/idpay-iban/values.yaml
@@ -1,11 +1,19 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpayiban
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-iban
+    tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
   ingress:
-    host: "dev01.idpay.internal.dev.cstar.pagopa.it"
+    create: true
+    host: "idpay.itn.internal.dev.cstar.pagopa.it"
+    path: /idpayiban(/|$)(.*)
+    rewriteTarget: /$2
+    servicePort: 8000
+    # proxyBodySize: 2m
+    annotations: {
+      nginx.ingress.kubernetes.io/satisfy: "any"
+    }
 
   resources:
     requests:
@@ -46,10 +54,10 @@ microservice-chart:
       -Dcom.sun.management.jmxremote.authenticate=false 
       -Dcom.sun.management.jmxremote.ssl=false
   envSecret:
-    aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
 
   keyvault:
-    name: "cstar-d-idpay-kv"
+    name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
 postman-test:
