--- a/helm/dev/ext/values.yaml
+++ b/helm/dev/ext/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpaymerchant
+    repository: ghcr.io/pagopa/idpaymerchant
     tag: latest
     pullPolicy: Always
 
