--- a/helm/dev/mid/idpay-initiative-statistics/values.yaml
+++ b/helm/dev/mid/idpay-initiative-statistics/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpayinitiativestatistics
+    repository: ghcr.io/pagopa/idpayinitiativestatistics
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
