--- a/helm/dev/mid/idpay-payment-instrument/values.yaml
+++ b/helm/dev/mid/idpay-payment-instrument/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpaypaymentinstrument
+    repository: ghcr.io/pagopa/idpaypaymentinstrument
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
