--- a/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: cstardcommonacr.azurecr.io/idpayportalwelfarebackendrolepermission
+    repository: ghcr.io/pagopa/idpayportalwelfarebackendrolepermission
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
