--- a/helm/dev/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/dev/mid/idpay-recovery-error-topic/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpayrecoveryerrortopic
+    repository: ghcr.io/pagopa/idpayrecoveryerrortopic
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
