--- a/helm/dev/mid/idpay-timeline/values.yaml
+++ b/helm/dev/mid/idpay-timeline/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstardcommonacr.azurecr.io/idpaytimeline
+    repository: ghcr.io/pagopa/idpaytimeline
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
