--- a/helm/dev/top/idpay-merchant/values.yaml
+++ b/helm/dev/top/idpay-merchant/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpaymerchant
+    repository: ghcr.io/pagopa/idpay-merchant
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
