--- a/helm/dev/mid/idpay-ranking/values.yaml
+++ b/helm/dev/mid/idpay-ranking/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: docker pull ghcr.io/pagopa/idpay-ranking
+    repository: ghcr.io/pagopa/idpay-ranking
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
