--- a/helm/dev/mid/idpay-group/values.yaml
+++ b/helm/dev/mid/idpay-group/values.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: docker pull ghcr.io/pagopa/idpay-group
+    repository: ghcr.io/pagopa/idpay-group
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
