--- a/helm/dev/mid/idpay-reward-user-id-splitter/values.yaml
+++ b/helm/dev/mid/idpay-reward-user-id-splitter/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: docker pull ghcr.io/pagopa/idpay-reward-user-id-splitter
+    repository: ghcr.io/pagopa/idpay-reward-user-id-splitter
     tag: snapshot-idp-2675-update-workflows-github
     pullPolicy: Always
 
