--- a/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -9,9 +9,8 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
-    create: true
-    path: /idpayportalwelfarebackendrolepermission/(.*)
-
+    host: idpay.itn.internal.dev.cstar.pagopa.it
+    
   resources:
     requests:
       memory: "512Mi"
