--- a/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
@@ -30,6 +30,9 @@ microservice-chart:
     type: ClusterIP
     ports:
       - 8080
+  ingress:
+    create: true
+    path: /idpayportalwelfarebackendrolepermission/(.*)
 
   podAnnotations: {}
 
