--- a/helm/dev/mid/idpay-group/values.yaml
+++ b/helm/dev/mid/idpay-group/values.yaml
@@ -9,15 +9,7 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
-    create: true
-    host: "idpay.itn.internal.dev.cstar.pagopa.it"
-    path: /idpaygroup(/|$)(.*)
-    rewriteTarget: /$2
-    servicePort: 8000
-    # proxyBodySize: 2m
-    annotations: {
-      nginx.ingress.kubernetes.io/satisfy: "any"
-    }
+    host: idpay.itn.internal.dev.cstar.pagopa.it
 
   resources:
     requests:
