--- a/helm/prod/ext/idpay-notification-email/values.yaml
+++ b/helm/prod/ext/idpay-notification-email/values.yaml
@@ -6,7 +6,7 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
-    host: "prod01.idpay.internal.cstar.pagopa.it"
+    host: idpay.itn.internal.cstar.pagopa.it
 
   resources:
     requests:
