--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -27,7 +27,7 @@ parameters:
     - prod
 
 - name: APPS_TOP
-  displayName: Top ArgoCD Apps
+  displayName: Top ArgoCD Apps. Set to [] to skip deployment.
   type: object
   default:
     - idpay-onboarding-workflow
@@ -41,7 +41,7 @@ parameters:
 
 
 - name: APPS_MID
-  displayName: Mid ArgoCD Apps
+  displayName: Mid ArgoCD Apps. Set to [] to skip deployment.
   type: object
   default:
     - idpay-payment-instrument
@@ -55,7 +55,7 @@ parameters:
     - idpay-ranking
 
 - name: APPS_EXT
-  displayName: Extra ArgoCD Apps
+  displayName: Extra ArgoCD Apps. Set to [] to skip deployment.
   type: object
   default:
     - idpay-self-expense-backend
@@ -174,6 +174,9 @@ stages:
           echo "argocdTargetBranch: ${{parameters.ARGOCD_TARGET_BRANCH}}"
           echo "postmanBranch: ${{parameters.POSTMAN_BRANCH}}"
           echo "triggerMessage: ${{parameters.TRIGGER_MESSAGE}}"
+          echo "App TOPS: ${{ join(' ', parameters.APPS_TOP) }}"
+          echo "App MID: ${{ join(' ', parameters.APPS_MID) }}"
+          echo "App EXT: ${{ join(' ', parameters.APPS_EXT) }}"
         displayName: 'Show Debug Information'
 
   #
@@ -208,7 +211,6 @@ stages:
             argocdUserPassword: $(argocdPassword)
             agentPoolName: $(agentPoolName)
             applicationPrefix: $(area)
-            dependsOnJob: 'deploy_top'
             targetBranch: ${{ parameters.ARGOCD_TARGET_BRANCH }}
 
       # Ext Apps
@@ -223,7 +225,6 @@ stages:
             argocdUserPassword: $(argocdPassword)
             agentPoolName: $(agentPoolName)
             applicationPrefix: $(area)
-            dependsOnJob: 'deploy_mid'
             targetBranch: ${{ parameters.ARGOCD_TARGET_BRANCH }}
 
 #  # Stage for Postman Tests
