--- a/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -9,16 +9,8 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
-    create: true
-    host: "idpay.itn.internal.dev.cstar.pagopa.it"
-    path: /idpayportalwelfarebackendrolepermission(/|$)(.*)
-    rewriteTarget: /$2
-    servicePort: 8000
-    # proxyBodySize: 2m
-    annotations: {
-      nginx.ingress.kubernetes.io/satisfy: "any"
-    }
-
+    host: idpay.itn.internal.dev.cstar.pagopa.it
+    
   resources:
     requests:
       memory: "512Mi"
