idpay onboarding ingress fix

--- a/helm/_global/idpay-onboarding-workflow.yaml
+++ b/helm/_global/idpay-onboarding-workflow.yaml
@@ -30,6 +30,10 @@ microservice-chart:
     ports:
       - 8080
 
+  ingress:
+    create: true
+    path: /idpayonboardingworkflow/(.*)
+
   podAnnotations: {}
 
   podSecurityContext:
