in dev change image tag to snapshot-release-dev

--- a/helm/_global/idpay-reward-user-id-splitter.yaml
+++ b/helm/_global/idpay-reward-user-id-splitter.yaml
@@ -32,7 +32,7 @@ microservice-chart:
 
   ingress:
     create: true
-    path: /idpay/splitter/(.*)
+    path: /idpaysplitter/(.*)
 
   podAnnotations: {}
 
