--- a/helm/dev/mid/idpay-group/values.yaml
+++ b/helm/dev/mid/idpay-group/values.yaml
@@ -5,7 +5,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-group
-    tag: snapshot-idp-2675-update-workflows-github
+    tag: snapshot-release-dev
     pullPolicy: Always
 
   ingress:
