--- a/helm/dev/top/idpay-payment/values.yaml
+++ b/helm/dev/top/idpay-payment/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-payment
-    tag: snapshot-IDP-2676-jdk-update-to-21
+    tag: snapshot-release-dev
     pullPolicy: Always
 
   ingress:
