--- a/helm/dev/top/idpay-transactions/values.yaml
+++ b/helm/dev/top/idpay-transactions/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-transactions
-    tag: snapshot-IDP-2675-update-workflows-github
+    tag: snapshot-release-dev
     pullPolicy: Always
 
   ingress:
