--- a/helm/_global/idpay-kafka-connect.yaml
+++ b/helm/_global/idpay-kafka-connect.yaml
@@ -96,3 +96,9 @@ microservice-chart:
     configMaps:
       - name: appinsights-config
         key: applicationinsights.json
+
+  tmpVolumeMount:
+    create: true
+    mounts:
+      - name: tmp
+        mountPath: /tmp
