--- a/helm/_global/idpay-keycloak.yaml
+++ b/helm/_global/idpay-keycloak.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   namespace: "idpay"
-  nameOverride: ""
-  fullnameOverride: ""
+  nameOverride: "keycloak"
+  fullnameOverride: "keycloak"
 
   livenessProbe:
     handlerType: httpGet
