--- a/helm/dev/top/idpay-keycloak/values.yaml
+++ b/helm/dev/top/idpay-keycloak/values.yaml
@@ -4,6 +4,9 @@ microservice-chart:
     tag: 26.1.4
     pullPolicy: Always
 
+  container:
+    args: ["start-dev"]
+
   ingress:
     host: idpay.itn.internal.dev.cstar.pagopa.it
     servicePort: 8080
