fix: update values

--- a/helm/dev/top/idpay-keycloak/values.yaml
+++ b/helm/dev/top/idpay-keycloak/values.yaml
@@ -5,7 +5,7 @@ microservice-chart:
     pullPolicy: Always
 
   container:
-    args: ["start-dev"]
+    args: ["start"]
 
   ingress:
     host: idpay.itn.internal.dev.cstar.pagopa.it
