feat: Add keycloak on idpay-deploy-aks (#18)
Co-authored-by: angelosca24 <angelo.scagliola@nttdata.com>

--- a/.devops/deploy-argocd-apps.yml
+++ b/.devops/deploy-argocd-apps.yml
@@ -38,6 +38,7 @@ parameters:
     - idpay-portal-welfare-backend-initiative
     - idpay-wallet
     - idpay-admissibility-assessor
+    - idpay-keycloak
 
 
 - name: APPS_MID
