change env variables file

--- a/helm/dev/mid/idpay-group/values.yaml
+++ b/helm/dev/mid/idpay-group/values.yaml
@@ -67,4 +67,4 @@ postman-test:
   repoName: idpay-group
   dir: postman
   collectionName: "idpay-group-e2e.postman_collection.json"
-  envVariablesFile: "idpay_dev.postman_environment.json"
+  envVariablesFile: "idpay_itn_dev.postman_environment.json"
