--- a/helm/dev/top/idpay-merchant/values.yaml
+++ b/helm/dev/top/idpay-merchant/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-merchant
-    tag: snapshot-release-dev
+    tag: snapshot-idp-2676-jdk-update-to-21
     pullPolicy: Always
 
   ingress:
