--- a/helm/dev/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/dev/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -2,7 +2,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-portal-welfare-backend-initiative
-    tag: snapshot-release-dev
+    tag: snapshot-idp-2676-jdk-update-to-21
     pullPolicy: Always
 
   ingress:
