--- a/helm/dev/ext/idpay-notification-email/values.yaml
+++ b/helm/dev/ext/idpay-notification-email/values.yaml
@@ -2,7 +2,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-notification-email
-    tag: snapshot-idp-2676-jdk-update-to-21
+    tag: snapshot-release-dev
     pullPolicy: Always
 
   ingress:
