--- a/helm/dev/mid/idpay-initiative-statistics/values.yaml
+++ b/helm/dev/mid/idpay-initiative-statistics/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-initiative-statistics
-    tag: snapshot-idp-2676-jdk-update-to-21
+    tag: snapshot-release-dev
     pullPolicy: Always
 
   ingress:
