--- a/helm/dev/ext/idpay-iban/values.yaml
+++ b/helm/dev/ext/idpay-iban/values.yaml
@@ -57,4 +57,4 @@ postman-test:
   repoName: idpay-iban
   dir: postman
   collectionName: "idpay-iban-e2e.postman_collection.json"
-  envVariablesFile: "idpay_dev.postman_environment.json"
+  envVariablesFile: "idpay_itn_dev.postman_environment.json"
