--- a/helm/dev/mid/idpay-payment-instrument/values.yaml
+++ b/helm/dev/mid/idpay-payment-instrument/values.yaml
@@ -55,9 +55,9 @@ microservice-chart:
     name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
-#  postman-test:
-#    run: true
-#    repoName: idpay-payment-instrument
-#    dir: postman
-#    collectionName: "idpay-payment-instrument-e2e.postman_collection.json"
-#    envVariablesFile: "idpay_dev.postman_environment.json"
+postman-test:
+  run: true
+  repoName: idpay-payment-instrument
+  dir: postman
+  collectionName: "idpay-payment-instrument-e2e.postman_collection.json"
+  envVariablesFile: "idpay_itn_dev.postman_environment.json"
