--- a/helm/dev/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/dev/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -61,9 +61,9 @@ microservice-chart:
 
   # affinity: {}
 
-#  postman-test:
-#    run: true
-#    repoName: idpay-portal-welfare-backend-initiative
-#    dir: postman
-#    collectionName: "idpay-initiative-e2e.postman_collection.json"
-#    envVariablesFile: "idpay_dev.postman_environment.json"
+postman-test:
+  run: true
+  repoName: idpay-portal-welfare-backend-initiative
+  dir: postman
+  collectionName: "idpay-initiative-e2e.postman_collection.json"
+  envVariablesFile: "idpay_itn_dev.postman_environment.json"
