Popolamento della cartella uat con gli helm di ogni microservizio, con profilo adattato da DEV a UAT

--- a/helm/uat/top/idpay-transactions/values.yaml
+++ b/helm/uat/top/idpay-transactions/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: cstarucommonacr.azurecr.io/idpaytransactions
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-transactions
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -28,11 +28,11 @@ microservice-chart:
 #          value: "70"
 
   envSecret:
-    aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
+    aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
