--- a/helm/uat/ext/idpay-notification-email/values.yaml
+++ b/helm/uat/ext/idpay-notification-email/values.yaml
@@ -1,8 +1,8 @@
 microservice-chart:
 
   image:
-    repository: cstarucommonacr.azurecr.io/idpaynotificationemail
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-notification-email
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -44,11 +44,11 @@ microservice-chart:
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
+    aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
