--- a/helm/uat/mid/idpay-group/values.yaml
+++ b/helm/uat/mid/idpay-group/values.yaml
@@ -4,8 +4,8 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: cstarucommonacr.azurecr.io/idpaygroup
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-group
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -42,11 +42,11 @@ microservice-chart:
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
+    aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
