--- a/helm/uat/top/idpay-merchant/values.yaml
+++ b/helm/uat/top/idpay-merchant/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: cstarucommonacr.azurecr.io/idpaymerchant
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-merchant
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -38,11 +38,11 @@ microservice-chart:
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
+    aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   postman-test:
